--- a/Login.html
+++ b/Login.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="repositorio.css">
     <link rel="stylesheet" href="Login.css" />
+     <link rel="shortcut icon" type="image/png" href="image-removebg-preview.png"/> 
+
     <title>Login</title>
   </head>
   <body>
