--- a/principal.html
+++ b/principal.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Coleta de Lixo</title>
   <link rel="stylesheet" href="principal.css"> 
+   <link rel="shortcut icon" type="image/png" href="image-removebg-preview.png"/> 
+
 </head>
 <body>
 
