--- a/perfil.html
+++ b/perfil.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="perfil.css">
+     <link rel="shortcut icon" type="image/png" href="image-removebg-preview.png"/> 
+
     <title>Perfil</title>
 </head>
 <body>
