--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,7 @@
 
       <label for="senha">Senha</label>
       <input type="password" name="senha" id="senha" placeholder="Exemplo_Senha1" required />
-
+<p id="erro"></p>
       <div class="login_links">
         <span>Não possui conta? <a href="#" class="criar_conta">clique aqui</a></span>
         <a href="#" class="esqueci_senha">Esqueci minha senha</a>
